# rename

./: LICENSE  README.md  SIMPLE_README.md  pyproject.toml  replit.md  simple.env  simple_requirements.txt  simple_setup.py  simple_thumbnail_bot.py
