[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "ffmpeg-python>=0.2.0",
    "openai>=1.97.1",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "pyrogram>=2.0.106",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.41",
]
